# aoc2

./: Cargo.toml  rust-toolchain.toml  template.rs
