[package]
name = "aoc"
version = "0.1.0"
edition = "2024"
authors = ["Meadowsys <meadowsys@kiwin.gay>"]
repository = "https://github.com/meadowsys/aoc2"
license = "AGPL-3.0-only"

[lints.rust]
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"

[dependencies.nom]
version = "7.1.3"

[dependencies.wiwi]
git = "https://github.com/meadowsys/wiwi"
rev = "52bb3e13b7fc6162920addfb39817cb413e74aa3"
